# DroneZ

./: .dockerignore  .gitignore  .openclaude-profile.json  BLOG.md  CLAUDE.md  COLAB_TRAINING.md  DOCKER_TESTING.md  DRONE_RL_PRODUCT_ARCHITECTURE.md  Dockerfile  FILE_BY_FILE_GUIDE.md  FINAL_READINESS_REPORT.md  FINAL_STAGE_SCRIPT.md  HF_SPACE_DEPLOYMENT.md  LEARN_DRONEZ_FROM_ZERO.md  PITCH.md  README.md  SUBMISSION_CHECKLIST.md  TECH_STACK_EXPLAINED.md  TRAINING_RESULTS_EXPLAINED.md  client.py  inference.py  openenv.yaml  pyproject.toml
.claude/: settings.json
.openclaude/: settings.json
configs/: fleet_profiles.yaml  reward_weights.yaml
context/: progress.md  urbanair_architecture.md  urbanair_project_context.md
demo_ui/: app.js  index.html  styles.css
dronez_world_sim/: README.md  TRAINING_STATUS.md  app.js  index.html  styles.css
notebooks/: train_dronez_grpo_colab.ipynb
scripts/: enrich_demo_trace.py  evaluate_policies.py  evaluate_policy.py  generate_demo_trace.py  generate_plots.py  generate_sft_action_data.py  generate_training_plots.py  train_action_format_sft.py  train_grpo.py  train_grpo_colab.py  train_grpo_local.py
server/: Dockerfile  app.py  requirements.txt
tests/: test_action_format.py  test_artifacts_runtime.py  test_benchmark_flow.py  test_demo_scripted_events.py  test_disruptions.py  test_env_actions.py  test_env_reset.py  test_env_rewards.py  test_env_termination.py  test_failure_recovery.py  test_inference_runtime.py  test_policies.py  test_seed_bundle.py  test_server_runtime.py  test_sim_reset.py  test_sim_step.py  (+2 more)
(+64 files in other folders)
